k8s/applications/media/arr/jellyfin/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: arr
spec:
  clusterIP: None
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: http
