k8s/applications/media/arr/jellyfin/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: arr
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - jellyfin.k8s.eudald.gr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
